group-guess (1.3.1-1) unstable; urgency=medium
  * Fixes Group Guess RPM (hopefully)
  * (Attempt to) Introduce PKGBUILD for Arch
  * Fixes alignment/padding of Question label

 -- LandonTheCoder <100165458+LandonTheCoder@users.noreply.github.com>  Sun, 16 Apr 2023 10:31:23 -0400

group-guess (1.3.0-1) unstable; urgency=medium
  * Releases first Group Guess RPM (for Fedora)
  * Fixes bug in asset-directory detection. Now, Group Guess tests for the existence of one of its asset files in that directory.

 -- LandonTheCoder <100165458+LandonTheCoder@users.noreply.github.com>  Tue, 05 Jul 2022 17:06:03 -0400

group-guess (1.2.3-1) unstable; urgency=medium
  * Polishes port to setuptools.
  * Should be ready for production.
  * Adds a .gitignore entry for the "Group_Guess.egg-info" directory.

 -- LandonTheCoder <100165458+LandonTheCoder@users.noreply.github.com>  Fri, 13 May 2022 18:37:05 -0400

group-guess (1.2.2-2) unstable; urgency=medium
  * Attempt to port to setuptools for future-proofing.
  * This is a local release for testing.

 -- LandonTheCoder <100165458+LandonTheCoder@users.noreply.github.com>  Fri, 13 May 2022 17:14:22 -0400

group-guess (1.2.2-1) unstable; urgency=medium
  * This adds a proper manpage, which I'll have to see if it includes
    automatically.
  * This fixes a long-standing bug where the cover images had an object
    slightly longer than SVG canvase size, causing the bottom to get cut off.
  * This fixes an underwater Unicode handling bug by changing answer
    comparison from x.lower().strip() to x.casefold().strip(), which should
    catch some non-matching sequences for comparison.

 -- LandonTheCoder <100165458+LandonTheCoder@users.noreply.github.com>  Tue, 10 May 2022 15:36:48 -0400

group-guess (1.2.1-1) unstable; urgency=medium
  * This is the public version containing the fixes of 1.2.0-2 and 1.2.0-3.
    Those fixes include:
  * Add tracking of example files in debian/group-guess.examples