@@ -39,6 +39,8 @@ The `group_guess.py` file is a library that can be used to create games of Group
    - [x] Support creating .deb packages (Debian/Ubuntu packages)
    - [x] Support creating RPM packages
      - Reading the RPM documentation, it seems the ideal way to build with an unpacked tarball is to use `rpmbuild -ba --build-in-place` instead of `rpmbuild -ba` (or `rpmbuild -bs && rpmbuild -bb`).
+   - [x] Support creating Arch packages (PKGBUILD)
+     - There are icon glitches in the Arch package which I have to debug, but it otherwise works.
  - [ ] Adding more debugging hooks
  - [ ] Use gtk.Application API to support app grouping
  - [ ] Optional: Fancy sound effects.
