@@ -21,7 +21,7 @@
 gg-gamesave \- program to open Group Guess savefiles
 
 .SH SYNOPSIS
-.B group-guess
+.B gg-gamesave
 .RI [ options ] " file"
 
 .SH DESCRIPTION
